Fix scrollbar dimming animation when the lightbox appears

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,9 @@ body.gscrollbar.glightbox-open {
 
 .glightbox-open {
     overflow: initial !important;
+}
+
+html.glightbox-open {
     scrollbar-color: #040606 #020303;
 }
 
